[package]
name = "rust-cmp"
version = "0.1.0"
authors = ["Sven Stahl <50907202+Stahl99@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
rodio = "0.11.0"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
mpd = "*"
time = "=0.2.0"
argh = "0.1.3"


[patch.crates-io]
mpd = { git = 'https://github.com/avatarwin/rust-mpd', branch = 'master'}